<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@drawable/bg">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/CURRENT_CREDIT"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="22dp"
            android:textColor="#14beff"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ALBUM_PRICE"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="12dp"
            android:singleLine="false"
            android:textColor="#1ab5ff"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/currentCredit"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/textView2"
            android:layout_toRightOf="@+id/textView"
            android:textColor="#20ff08"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/albumPrice"
            android:layout_below="@+id/textView"
            android:layout_alignRight="@+id/currentCredit"
            android:layout_alignBottom="@+id/textView2"
            android:layout_toRightOf="@+id/textView"
            android:textColor="#40ff4b"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FINAL_ORDER"
            android:id="@+id/finalOrder"
            android:singleLine="false"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="14dp"/>

</RelativeLayout>